--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@
     <!-- bootstrap css link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- style sheet link   -->
-    <link rel="stylesheet" href="../css/Style.css">
+    <link rel="stylesheet" href="Style.css">
     <title>Best Shop</title>
 </head>
 <body>
