--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- bootstrap css link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- favicon link  -->
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <!-- style sheet link   -->
     <link rel="stylesheet" href="Style.css">
     <title>Best Shop</title>
@@ -52,7 +54,7 @@
             </div>
 
             <div class="col-8 Text-img">
-                <img src="../images/top_img.png" class="img-fluid home-img" alt="...">
+                <img src="images/top_img.png" class="img-fluid home-img" alt="...">
             </div>
         </div>
       </div>
@@ -64,7 +66,7 @@
             <div class=" about-bg">
                 <h1 class="about-titel">About Best Shop</h1>
                 <p class="about-details">These are the best online shopping websites to find deals, compare prices, go window shopping, and more. Don't miss out on these shopping Website</p>
-                <img src="../images/about_img.png" class="img-fluid about-img my-5" alt="...">
+                <img src="images/about_img.png" class="img-fluid about-img my-5" alt="...">
                 
             </div>
         </div>
